--- a/hugo.toml
+++ b/hugo.toml
@@ -6,7 +6,7 @@ relativeURLs = true
 enableEmoji = true
 googleAnalytics = ""
 enableRobotsTXT = true
-copyright = "&copy; Copyright 2024, qu1sta"
+copyright = "&copy; Copyright 2024, yorumo"
 
 # Main menu items
 [menu]
@@ -33,7 +33,7 @@ copyright = "&copy; Copyright 2024, qu1sta"
 [params]
   description = "Your meta description"      # Your meta description of the site
   header_title = "メモを書いておくページ"                 # Your header title
-  header_subtitle = "Your Creative Subtitle" # Your header subtitle
+  header_subtitle = "勉強のメモとか" # Your header subtitle
   home_image = "/images/avatar.png"          # Path to header image starting from the static directory (optional)
   recent_posts = 5                           # Max amount of recent posts to show
   mainSections = ["posts", "post", "blog"]   # Main sections to include in recent posts
@@ -44,7 +44,7 @@ copyright = "&copy; Copyright 2024, qu1sta"
     fontColor = "#212529"
   [[params.social]]
     fa_icon = "fab fa-github fa-1x"          # Font Awesome icon class
-    href = "http://github.com/youruser"      # Link to associate with icon (http://, https://, mailto:)
+    href = "http://github.com/yorumo"      # Link to associate with icon (http://, https://, mailto:)
   [[params.social]]
     fa_icon = "fab fa-linkedin-in fa-1x"
     href = ""
